--- a/index.html
+++ b/index.html
@@ -1,16 +1,198 @@
 <!DOCTYPE html>
 <html lang="en">
- 
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Business Landing Page</title>
- 
+    <title>Digital Marketing Landing Page</title>
+
     <link rel="stylesheet" href="style.css">
 </head>
- 
+
 <body>
-    
+    <nav>
+        <div class="navbar-top">
+            <div class="location">
+                <img src="./assets/location.png" alt="Location Icon">
+                OUTR, Ghatikia, Bhubaneswar
+            </div>
+            <div class="contact">
+                <img src="./assets/phone.png" alt="Phone Icon">
+                +91 9999999999
+            </div>
+        </div>
+        <header>
+            <div class="logo">
+                Digital Marketing
+            </div>
+            <ul class="menu">
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About Us</a></li>
+                <li><a href="#">Services</a></li>
+                <li><a href="#">News</a></li>
+                <button class="contact-btn">Contact Us</button>
+            </ul>
+        </header>
+    </nav>
+    <main>
+        <section class="hero-section">
+            <div>
+                <div class="content">
+                    <h3>Digital Marketing</h3>
+                    <h1>Work that we produce for our clients</h1>
+                    <p>We specialize in designing tailored digital strategies that enhance engagement, increase brand
+                        awareness, and drive measurable results for businesses across industries.</p>
+                    <button class="details-btn">Get More Details</button>
+                </div>
+                <div class="hero-image">
+                    <img src="./assets/hero-image.png" alt="Hero Image">
+                </div>
+            </div>
+            <img class="hero-bg-image" src="./assets/hero-bg-img.png" alt="Hero Background Image">
+        </section>
+        <section class="services-section">
+            <h2>Explore the Future of Game Development and Immersive Technologies</h2>
+            <p>From groundbreaking mobile games to cutting-edge AR/VR solutions, our expertise spans the full spectrum
+                of modern gaming and immersive experiences. Join us in creating the next generation of interactive
+                entertainment.</p>
+            <div>
+                <div class="service-item">
+                    <img src="./assets/mobile.png" alt="Mobile Game Development">
+                    <h4>Mobile Game Development</h4>
+                    <img src="./assets/arrow.png" alt="Arrow Icon">
+                </div>
+                <div class="service-item">
+                    <img src="./assets/pc-game.png" alt="PC Game Development">
+                    <h4>PC Game Development</h4>
+                    <img src="./assets/arrow.png" alt="Arrow Icon">
+                </div>
+                <div class="service-item">
+                    <img src="./assets/ps4.png" alt="PS4 Game Development">
+                    <h4>PS4 Game Development</h4>
+                    <img src="./assets/arrow.png" alt="Arrow Icon">
+                </div>
+                <div class="service-item">
+                    <img src="./assets/ar-solutions.png" alt="AR/VR Solutions">
+                    <h4>AR/VR Solutions</h4>
+                    <img src="./assets/arrow.png" alt="Arrow Icon">
+                </div>
+                <div class="service-item">
+                    <img src="./assets/ar-design.png" alt="AR/VR Design">
+                    <h4>AR/VR Design</h4>
+                    <img src="./assets/arrow.png" alt="Arrow Icon">
+                </div>
+                <div class="service-item">
+                    <img src="./assets/3d-modeling.png" alt="3D Modeling">
+                    <h4>3D Modeling</h4>
+                    <img src="./assets/arrow.png" alt="Arrow Icon">
+                </div>
+            </div>
+        </section>
+        <section class="insights-section">
+            <h2>Innovative Strategies and Insights</h2>
+            <div>
+                <p>Discover how our unique approaches and tools can transform your brand's digital presence and customer
+                    engagement.</p>
+                <div class="navigation">
+                    <img src="./assets/previous-icon.png" alt="Previous Icon">
+                    <img src="./assets/next-icon.png" alt="Next Icon">
+                </div>
+            </div>
+            <div>
+                <div class="card">
+                    <button class="category-btn">Marketing Tips</button>
+                    <h4>Boost Your Online Visibility</h4>
+                    <p>Explore strategies that improve your search rankings and attract a larger audience.</p>
+                    <button class="read-more-btn">Read More <img src="./assets/arrow.png" alt="Arrow Icon"></button>
+                </div>
+                <div class="card">
+                    <button class="category-btn">Game Development</button>
+                    <h4>Next-Gen Gaming Insights</h4>
+                    <p>Learn about innovative technologies shaping the gaming industry today.</p>
+                    <button class="read-more-btn">Read More <img src="./assets/arrow.png" alt="Arrow Icon"></button>
+                </div>
+                <div class="card">
+                    <button class="category-btn">AR/VR Trends</button>
+                    <h4>Immersive Experiences</h4>
+                    <p>Delve into the latest trends in augmented and virtual reality design.</p>
+                    <button class="read-more-btn">Read More <img src="./assets/arrow.png" alt="Arrow Icon"></button>
+                </div>
+            </div>
+        </section>
+        <section class="recent-projects">
+            <h2>Our Recent Projects</h2>
+            <p>Discover the cutting-edge projects we’ve delivered for our clients across industries.</p>
+            <div class="project-gallery">
+                <img src="./assets/project1.png" alt="Project 1">
+                <img src="./assets/project2.png" alt="Project 2">
+                <img src="./assets/project3.png" alt="Project 3">
+                <img src="./assets/project4.png" alt="Project 4">
+                <img src="./assets/project5.png" alt="Project 5">
+                <img src="./assets/project6.png" alt="Project 6">
+            </div>
+        </section>
+
+        <section class="team-highlight">
+            <div class="image">
+                <img src="./assets/together.png" alt="Teamwork Illustration">
+            </div>
+            <div class="content">
+                <h2>Building Strong Teams</h2>
+                <p>Collaboration is at the heart of everything we do. We work together to create impactful solutions.
+                </p>
+                <p>Our commitment to innovation and teamwork ensures outstanding results for our clients.</p>
+                <button>Read More</button>
+            </div>
+        </section>
+
+        <section class="newsletter">
+            <h2>Stay Updated</h2>
+            <p>Subscribe to our newsletter for insights and updates on our latest projects and trends.</p>
+            <div class="newsletter-container">
+                <div class="content">
+                    <h3>Exclusive Updates</h3>
+                    <p>Receive valuable content straight to your inbox. Stay ahead with our industry insights.</p>
+                </div>
+                <div class="form">
+                    <input type="email" placeholder="Enter your email" aria-label="Email Address">
+                    <button class="">Subscribe</button>
+                </div>
+            </div>
+        </section>
+    </main>
+    <footer>
+        <div class="top">
+            <div class="about">
+                <div class="logo">Digital Marketing</div>
+                <p>Your trusted partner in digital strategy and execution.</p>
+                <h5><a href="mailto:info@digitalmarketing-landing.vercel.app">info@digitalmarketing-landing.vercel.app</a></h5>
+            </div>
+            <div class="links">
+                <h4>About Us</h4>
+                <ul>
+                    <li><a href="#">Company</a></li>
+                    <li><a href="#">Portfolio</a></li>
+                    <li><a href="#">Careers</a></li>
+                    <li><a href="#">Contact Us</a></li>
+                </ul>
+            </div>
+            <div class="contact">
+                <h4>Contact Us</h4>
+                <p>OUTR, Ghatikia, Khandagiri, Bhubaneswar, 751029</p>
+                <p>+91 9999999999</p>
+            </div>
+            <div class="social">
+                <img src="./assets/facebook.png" alt="Facebook">
+                <img src="./assets/twitter.png" alt="Twitter">
+                <img src="./assets/linkedin.png" alt="LinkedIn">
+                <img src="./assets/instagram.png" alt="Instagram">
+            </div>
+        </div>
+        <div class="copyright">
+            <p>&copy; 2024 Digital Marketing | All rights reserved</p>
+        </div>
+    </footer>
+
 </body>
- 
+
 </html>
