style: add CSS to existing HTML file

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
                 <img src="./assets/location.png" alt="Location Icon">
                 OUTR, Ghatikia, Bhubaneswar
             </div>
-            <div class="contact">
+            <a href="tel:+919999999999" class="contact">
                 <img src="./assets/phone.png" alt="Phone Icon">
                 +91 9999999999
-            </div>
+            </a>
         </div>
         <header>
             <div class="logo">
@@ -36,17 +36,15 @@
     </nav>
     <main>
         <section class="hero-section">
-            <div>
-                <div class="content">
-                    <h3>Digital Marketing</h3>
-                    <h1>Work that we produce for our clients</h1>
-                    <p>We specialize in designing tailored digital strategies that enhance engagement, increase brand
-                        awareness, and drive measurable results for businesses across industries.</p>
-                    <button class="details-btn">Get More Details</button>
-                </div>
-                <div class="hero-image">
-                    <img src="./assets/hero-image.png" alt="Hero Image">
-                </div>
+            <div class="content">
+                <h3>Digital Marketing</h3>
+                <h1>Work that we produce for our clients</h1>
+                <p>We specialize in designing tailored digital strategies that enhance engagement, increase brand
+                    awareness, and drive measurable results for businesses across industries.</p>
+                <button class="details-btn">Get More Details</button>
+            </div>
+            <div class="hero-image">
+                <img src="./assets/hero-image.png" alt="Hero Image">
             </div>
             <img class="hero-bg-image" src="./assets/hero-bg-img.png" alt="Hero Background Image">
         </section>
@@ -55,42 +53,42 @@
             <p>From groundbreaking mobile games to cutting-edge AR/VR solutions, our expertise spans the full spectrum
                 of modern gaming and immersive experiences. Join us in creating the next generation of interactive
                 entertainment.</p>
-            <div>
+            <div class="service-grid">
                 <div class="service-item">
                     <img src="./assets/mobile.png" alt="Mobile Game Development">
                     <h4>Mobile Game Development</h4>
-                    <img src="./assets/arrow.png" alt="Arrow Icon">
+                    <img src="./assets/arrow.png" alt="Arrow Icon" class="arrow-icon">
                 </div>
                 <div class="service-item">
                     <img src="./assets/pc-game.png" alt="PC Game Development">
                     <h4>PC Game Development</h4>
-                    <img src="./assets/arrow.png" alt="Arrow Icon">
+                    <img src="./assets/arrow.png" alt="Arrow Icon" class="arrow-icon">
                 </div>
                 <div class="service-item">
                     <img src="./assets/ps4.png" alt="PS4 Game Development">
                     <h4>PS4 Game Development</h4>
-                    <img src="./assets/arrow.png" alt="Arrow Icon">
+                    <img src="./assets/arrow.png" alt="Arrow Icon" class="arrow-icon">
                 </div>
                 <div class="service-item">
                     <img src="./assets/ar-solutions.png" alt="AR/VR Solutions">
                     <h4>AR/VR Solutions</h4>
-                    <img src="./assets/arrow.png" alt="Arrow Icon">
+                    <img src="./assets/arrow.png" alt="Arrow Icon" class="arrow-icon">
                 </div>
                 <div class="service-item">
                     <img src="./assets/ar-design.png" alt="AR/VR Design">
                     <h4>AR/VR Design</h4>
-                    <img src="./assets/arrow.png" alt="Arrow Icon">
+                    <img src="./assets/arrow.png" alt="Arrow Icon" class="arrow-icon">
                 </div>
                 <div class="service-item">
                     <img src="./assets/3d-modeling.png" alt="3D Modeling">
                     <h4>3D Modeling</h4>
-                    <img src="./assets/arrow.png" alt="Arrow Icon">
+                    <img src="./assets/arrow.png" alt="Arrow Icon" class="arrow-icon">
                 </div>
             </div>
         </section>
         <section class="insights-section">
             <h2>Innovative Strategies and Insights</h2>
-            <div>
+            <div class="content">
                 <p>Discover how our unique approaches and tools can transform your brand's digital presence and customer
                     engagement.</p>
                 <div class="navigation">
@@ -98,24 +96,27 @@
                     <img src="./assets/next-icon.png" alt="Next Icon">
                 </div>
             </div>
-            <div>
+            <div class="insights-grid">
                 <div class="card">
-                    <button class="category-btn">Marketing Tips</button>
+                    <button class="category-btn1">Marketing Tips</button>
                     <h4>Boost Your Online Visibility</h4>
                     <p>Explore strategies that improve your search rankings and attract a larger audience.</p>
-                    <button class="read-more-btn">Read More <img src="./assets/arrow.png" alt="Arrow Icon"></button>
+                    <button class="read-more-btn">Read More <img src="./assets/arrow.png" alt="Arrow Icon"
+                            class="arrow-icon"></button>
                 </div>
                 <div class="card">
-                    <button class="category-btn">Game Development</button>
+                    <button class="category-btn2">Game Development</button>
                     <h4>Next-Gen Gaming Insights</h4>
-                    <p>Learn about innovative technologies shaping the gaming industry today.</p>
-                    <button class="read-more-btn">Read More <img src="./assets/arrow.png" alt="Arrow Icon"></button>
+                    <p>Learn more about innovative technologies shaping the gaming industry today.</p>
+                    <button class="read-more-btn">Read More <img src="./assets/arrow.png" alt="Arrow Icon"
+                            class="arrow-icon"></button>
                 </div>
                 <div class="card">
-                    <button class="category-btn">AR/VR Trends</button>
+                    <button class="category-btn3">AR/VR Trends</button>
                     <h4>Immersive Experiences</h4>
                     <p>Delve into the latest trends in augmented and virtual reality design.</p>
-                    <button class="read-more-btn">Read More <img src="./assets/arrow.png" alt="Arrow Icon"></button>
+                    <button class="read-more-btn">Read More <img src="./assets/arrow.png" alt="Arrow Icon"
+                            class="arrow-icon"></button>
                 </div>
             </div>
         </section>
@@ -123,15 +124,12 @@
             <h2>Our Recent Projects</h2>
             <p>Discover the cutting-edge projects we’ve delivered for our clients across industries.</p>
             <div class="project-gallery">
-                <img src="./assets/project1.png" alt="Project 1">
-                <img src="./assets/project2.png" alt="Project 2">
-                <img src="./assets/project3.png" alt="Project 3">
                 <img src="./assets/project4.png" alt="Project 4">
-                <img src="./assets/project5.png" alt="Project 5">
-                <img src="./assets/project6.png" alt="Project 6">
+                <img src="./assets/project3.png" alt="Project 3">
+                <img src="./assets/project2.png" alt="Project 2">
+                <img src="./assets/project1.png" alt="Project 1">
             </div>
         </section>
-
         <section class="team-highlight">
             <div class="image">
                 <img src="./assets/together.png" alt="Teamwork Illustration">
@@ -144,19 +142,18 @@
                 <button>Read More</button>
             </div>
         </section>
-
         <section class="newsletter">
             <h2>Stay Updated</h2>
             <p>Subscribe to our newsletter for insights and updates on our latest projects and trends.</p>
-            <div class="newsletter-container">
+            <div class="container">
                 <div class="content">
                     <h3>Exclusive Updates</h3>
                     <p>Receive valuable content straight to your inbox. Stay ahead with our industry insights.</p>
                 </div>
-                <div class="form">
-                    <input type="email" placeholder="Enter your email" aria-label="Email Address">
-                    <button class="">Subscribe</button>
-                </div>
+                <form class="form">
+                    <input type="email" placeholder="Enter your email" aria-label="Email Address" required>
+                    <button type="submit" class="">Subscribe</button>
+                </form>
             </div>
         </section>
     </main>
@@ -165,7 +162,9 @@
             <div class="about">
                 <div class="logo">Digital Marketing</div>
                 <p>Your trusted partner in digital strategy and execution.</p>
-                <h5><a href="mailto:info@digitalmarketing-landing.vercel.app">info@digitalmarketing-landing.vercel.app</a></h5>
+                <h5><a
+                        href="mailto:info@digitalmarketing-landing.vercel.app">info@digitalmarketing-landing.vercel.app</a>
+                </h5>
             </div>
             <div class="links">
                 <h4>About Us</h4>
