chore: update SEO meta tags and keywords

--- a/index.html
+++ b/index.html
@@ -4,7 +4,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Digital Marketing Landing Page</title>
+    <title>Digital Marketing Landing Page || Manas</title>
+    <link rel="shortcut icon" href="./assets/favicon.ico" type="image/x-icon">
+    <meta name="description" content="Discover innovative digital marketing strategies, game development, and AR/VR solutions designed to enhance engagement, boost brand visibility, and deliver measurable results for your business.">
+    <meta name="keywords" content="Digital Marketing, Digital Strategies, Online Marketing, Game Development, AR/VR Solutions, Mobile Game Development, 3D Modeling, Marketing Insights, Immersive Technologies, Recent Projects, News Updates, Digital Engagement, Brand Awareness, Digital Trends, Marketing Tips, Digital Newsletter, Bhubaneswar Marketing Agency">
+
+    <!-- Open graph -->
+    <meta property="og:title" content="Digital Marketing Landing Page || Manas">
+    <meta property="og:image" content="https://digitalmarketing-landing.vercel.app/assets/digital-marketing-logo.png">
+    <meta property="og:description" content="Discover innovative digital marketing strategies, game development, and AR/VR solutions designed to enhance engagement, boost brand visibility, and deliver measurable results for your business.">
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Digital Marketing Landing Page || Manas">
+    <meta name="twitter:description" content="Discover innovative digital marketing strategies, game development, and AR/VR solutions designed to enhance engagement, boost brand visibility, and deliver measurable results for your business.">
+    <meta name="twitter:creator" content="@pkmanas22">
+    <meta name="twitter:image" content="https://digitalmarketing-landing.vercel.app/assets/digital-marketing-logo.png">
+    <meta name="twitter:image:alt" content="Digital Marketing Logo">
 
     <link rel="stylesheet" href="style.css">
 </head>
