style: add responsiveness and some animation for hero image

--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
                 <li><a href="#">News</a></li>
                 <button class="contact-btn">Contact Us</button>
             </ul>
+            <div class="menubar">
+                <img src="./assets/menubar.png" alt="Menubar Icon">
+            </div>
         </header>
     </nav>
     <main>
@@ -193,7 +196,7 @@
             </div>
             <div class="contact">
                 <h4>Contact Us</h4>
-                <p>OUTR, Ghatikia, Khandagiri, Bhubaneswar, 751029</p>
+                <p>OUTR, Ghatikia, <br/> Khandagiri, Bhubaneswar, <br/> 751029</p>
                 <p>+91 9999999999</p>
             </div>
             <div class="social">
